<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".TestActivity">

    <com.waffiq.CountryPickerButton
      android:id="@+id/cpb_test"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:clickable="true"
      android:focusable="true"
      android:foreground="?attr/selectableItemBackgroundBorderless"
      app:cardBackgroundColor="@color/buttonBackgroundColor"
      app:cardCornerRadius="15dp"
      app:cardElevation="0dp"
      app:cpa_defaultCountryISO="US"
      app:cpa_dialogApplyBorderSearch="true"
      app:cpa_dialogBackgroundColor="@color/dialogBackgroundColor"
      app:cpa_dialogSearchBackgroundColor="@color/dialogSearchBackgroundColor"
      app:cpa_dialogSearchCrossIconColor="@color/dialogSearchCrossIconColor"
      app:cpa_dialogTextColor="@color/dialogTextColor"
      app:cpa_dialogTextHintColor="@color/dialogTextHintColor"
      app:cpa_fontFamily="@font/nunito_sans_regular"
      app:strokeWidth="0dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>