...
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:layout_weight="1"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/tv_country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        tools:text="Indonesia" />
...
