...
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <com.waffiq.CountryPickerButton
      android:id="@+id/cpb"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:clickable="true"
      android:focusable="true"
      android:foreground="?attr/selectableItemBackgroundBorderless"
...
